// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="Container-vls6mb-0 jkoZGC"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="Container-vls6mb-0 jkoZGC"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="Container-vls6mb-0 jkoZGC"
>
  <span
    className="TabLinkFill__CountWrapper-sc-1j1x54c-1 deiMNe"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="Container-vls6mb-0 jkoZGC"
>
  <div
    className="TabLinkFill__ElementLeftWrapper-sc-1j1x54c-0 cQOvyi"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="Container-vls6mb-0 jkoZGC"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="Container-vls6mb-0 gOWuLA"
  size="small"
/>
`;
